add first class projects

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <html>
     <head>
-        <Title> abbibennett</Title>
-        <body>
-            <p>hello world</p>
+        <Title> Abbi's Room </Title>
+         <body>
+            <h1> Abbi's Room</h1>
+
+         <p>Welcome to my room! This is my homepage for Homemade Web. Thanks for visiting!</p>
+        <ul>
+            <li><a href="first-website/index.html"</a>first website</li>
+            <li><a href="passion/index.html">passion part 1 & 2</a></li>
+        </ul>
+
+       
         </body>
     </head>
 </html>
